# YATM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
backend/: CMakeLists.txt
backend/include/: task.hpp
backend/src/: Task.cpp  main.cpp  task.cpp
ext/imgui/: imconfig.h
ext/json/: json.hpp
include/: Datetime.h  category.hpp  date.hpp  datetime.hpp  graphics.hpp  scheduler.hpp  task.hpp  task_grid.hpp
source/: Datetime.cpp  category.cpp  datetime.cpp  graphics.cpp  main.cpp  scheduler.cpp  task.cpp  task_grid.cpp
test/: test_main.cpp  test_task.cpp
